@@ -1,4 +1,4 @@
 DIST maven-project-2.0.tar.bz2 103817 RMD160 866e62361f7bf39f460863bccd7a1fcdc38fce36 SHA1 702138ff62d4184bed4bf0f4c41e3129723f555c SHA256 43fb45c25f0a3bbfacc9a36af517f827f065354bbfd6c6ba3c700506a433baa1
-EBUILD maven-project-2.0.ebuild 1015 RMD160 f9644b63a08a3c2cfbe9e2f1d0f2138721baf5eb SHA1 4c012dd1825a29f85800eaf49875b12b5bea5a58 SHA256 32443d1204885a7032fd467dd9621b62bac84c9c392bfcbdcddbf0190ae2b414
-MISC ChangeLog 255 RMD160 0071a18ad0d76e460ee69e49aa4f262bc9280dfd SHA1 e5f30bbbdbdebedd11dabcf696113074b15886ea SHA256 cf2d3f4cb35c1f53f140ec873bed664f97400e138878bbf5bfb1fc57a484409a
+EBUILD maven-project-2.0.ebuild 1076 RMD160 441d49f98827a27848c4c0198bee7c9679e62ead SHA1 079fb25f51b469faa68184d19e25c9f6caf6b392 SHA256 2cb9dcc4cacb1754d25b46449ae6631487e81eb6e8f883be52e348ff8020c9a6
+MISC ChangeLog 360 RMD160 e637591a66c52da0d0e0b51a6a0fd8cbd7a6cd11 SHA1 ce1d2b98408a8c7072777d448c6814e5442dfe3b SHA256 4172d5d129f12e2e73d94a63833160b0a55cc5138be3573a91cf1ae80ab43888
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
